Fixes in Scrollbar

--- a/example/example.css
+++ b/example/example.css
@@ -24,8 +24,6 @@ body {
 }
 
 .scrollbar {
-  display: inline-block;
   max-height: 150px;
-  overflow: auto;
   padding: 0 10px;
 }
